Adding listOf templates for up to 5 items